@@ -22,20 +22,17 @@ import static de.tudarmstadt.ukp.clarin.webanno.curation.casdiff.CasDiff.getDiff
 import static de.tudarmstadt.ukp.clarin.webanno.curation.casdiff.LinkCompareBehavior.LINK_ROLE_AS_LABEL;
 import static de.tudarmstadt.ukp.clarin.webanno.model.Mode.ANNOTATION;
 import static java.util.function.Function.identity;
-import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.joining;
 import static java.util.stream.Collectors.toMap;
 
 import java.io.IOException;
+import java.lang.invoke.MethodHandles;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.apache.uima.cas.CAS;
-import org.apache.uima.cas.FeatureStructure;
 import org.apache.uima.cas.text.AnnotationFS;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -43,18 +40,13 @@ import org.springframework.core.annotation.Order;
 
 import de.tudarmstadt.ukp.clarin.webanno.curation.casdiff.CasDiff;
 import de.tudarmstadt.ukp.clarin.webanno.curation.casdiff.CasDiff.Configuration;
-import de.tudarmstadt.ukp.clarin.webanno.curation.casdiff.CasDiff.ConfigurationSet;
 import de.tudarmstadt.ukp.clarin.webanno.curation.casdiff.CasDiff.DiffResult;
-import de.tudarmstadt.ukp.clarin.webanno.curation.casdiff.api.DiffAdapter;
 import de.tudarmstadt.ukp.clarin.webanno.curation.casdiff.api.Position;
 import de.tudarmstadt.ukp.clarin.webanno.curation.casdiff.internal.AID;
-import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationFeature;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationLayer;
 import de.tudarmstadt.ukp.clarin.webanno.security.UserDao;
 import de.tudarmstadt.ukp.clarin.webanno.security.model.User;
 import de.tudarmstadt.ukp.inception.documents.api.DocumentService;
-import de.tudarmstadt.ukp.inception.rendering.Renderer;
-import de.tudarmstadt.ukp.inception.rendering.editorstate.AnnotatorState;
 import de.tudarmstadt.ukp.inception.rendering.pipeline.RenderStep;
 import de.tudarmstadt.ukp.inception.rendering.request.RenderRequest;
 import de.tudarmstadt.ukp.inception.rendering.vmodel.VArc;
@@ -62,9 +54,7 @@ import de.tudarmstadt.ukp.inception.rendering.vmodel.VComment;
 import de.tudarmstadt.ukp.inception.rendering.vmodel.VCommentType;
 import de.tudarmstadt.ukp.inception.rendering.vmodel.VDocument;
 import de.tudarmstadt.ukp.inception.rendering.vmodel.VID;
-import de.tudarmstadt.ukp.inception.rendering.vmodel.VObject;
 import de.tudarmstadt.ukp.inception.schema.api.AnnotationSchemaService;
-import de.tudarmstadt.ukp.inception.schema.api.layer.LayerSupport;
 import de.tudarmstadt.ukp.inception.schema.api.layer.LayerSupportRegistry;
 import de.tudarmstadt.ukp.inception.ui.curation.sidebar.CurationSidebarService;
 import de.tudarmstadt.ukp.inception.ui.curation.sidebar.config.CurationSidebarAutoConfiguration;
@@ -83,7 +73,7 @@ public class CurationSidebarRenderer
 
     private static final String COLOR = "#ccccff";
 
-    private final Logger log = LoggerFactory.getLogger(getClass());
+    private final static Logger LOG = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
     private final CurationSidebarService curationService;
     private final LayerSupportRegistry layerSupportRegistry;
@@ -111,7 +101,7 @@ public class CurationSidebarRenderer
     @Override
     public boolean accepts(RenderRequest aRequest)
     {
-        AnnotatorState state = aRequest.getState();
+        var state = aRequest.getState();
 
         // do not show predictions on the decicated curation page
         if (state != null && state.getMode() != ANNOTATION) {
@@ -128,90 +118,66 @@ public class CurationSidebarRenderer
     @Override
     public void render(VDocument aVdoc, RenderRequest aRequest)
     {
-        String sessionOwner = userRepository.getCurrentUsername();
-        if (!curationService.existsSession(sessionOwner, aRequest.getProject().getId())) {
+        var sessionOwner = userRepository.getCurrentUsername();
+        var project = aRequest.getProject();
+
+        if (!curationService.existsSession(sessionOwner, project.getId())) {
             return;
         }
 
-        List<User> selectedUsers = curationService.listUsersReadyForCuration(sessionOwner,
-                aRequest.getProject(), aRequest.getSourceDocument());
-
+        var selectedUsers = curationService.listUsersReadyForCuration(sessionOwner, project,
+                aRequest.getSourceDocument());
         if (selectedUsers.isEmpty()) {
             return;
         }
 
-        Map<String, CAS> casses = new LinkedHashMap<>();
-
-        // This is the CAS that the user can actively edit
-        casses.put(aRequest.getAnnotationUser().getUsername(), aRequest.getCas());
-
-        for (User user : selectedUsers) {
-            try {
-                CAS userCas = documentService.readAnnotationCas(aRequest.getSourceDocument(),
-                        user.getUsername());
-                casses.put(user.getUsername(), userCas);
-            }
-            catch (IOException e) {
-                log.error("Could not retrieve CAS for user [{}] and project {}", user.getUsername(),
-                        aRequest.getProject(), e);
-            }
-        }
-
-        List<DiffAdapter> adapters = getDiffAdapters(annotationService,
-                aRequest.getVisibleLayers());
-        CasDiff casDiff = doDiff(adapters, LINK_ROLE_AS_LABEL, casses,
-                aRequest.getWindowBeginOffset(), aRequest.getWindowEndOffset());
-        DiffResult diff = casDiff.toResult();
+        var casDiff = createDiff(aRequest, selectedUsers);
+        var diff = casDiff.toResult();
 
         // Listing the features once is faster than repeatedly hitting the DB to list features for
         // every layer.
-        List<AnnotationFeature> supportedFeatures = annotationService
-                .listSupportedFeatures(aRequest.getProject());
-        List<AnnotationFeature> allFeatures = annotationService
-                .listAnnotationFeature(aRequest.getProject());
+        var supportedFeatures = annotationService.listSupportedFeatures(project);
+        var allFeatures = annotationService.listAnnotationFeature(project);
 
         // Set up a cache for resolving type to layer to avoid hammering the DB as we process each
         // position
-        Map<String, AnnotationLayer> type2layer = diff.getPositions().stream()
-                .map(Position::getType).distinct()
-                .map(type -> annotationService.findLayer(aRequest.getProject(), type))
+        var type2layer = diff.getPositions().stream().map(Position::getType).distinct()
+                .map(type -> annotationService.findLayer(project, type))
                 .collect(toMap(AnnotationLayer::getName, identity()));
 
-        Set<VID> generatedCurationVids = new HashSet<>();
-        boolean showAll = curationService.isShowAll(sessionOwner, aRequest.getProject().getId());
-        String curationTarget = curationService.getCurationTarget(sessionOwner,
-                aRequest.getProject().getId());
-        for (ConfigurationSet cfgSet : diff.getConfigurationSets()) {
+        var generatedCurationVids = new HashSet<VID>();
+        var showAll = curationService.isShowAll(sessionOwner, project.getId());
+        var curationTarget = curationService.getCurationTarget(sessionOwner, project.getId());
+        for (var cfgSet : diff.getConfigurationSets()) {
             if (!showAll && cfgSet.getCasGroupIds().contains(curationTarget)) {
                 // Hide configuration sets where the curator has already curated (likely)
                 continue;
             }
 
-            AnnotationLayer layer = type2layer.get(cfgSet.getPosition().getType());
+            var layer = type2layer.get(cfgSet.getPosition().getType());
 
-            List<AnnotationFeature> layerSupportedFeatures = supportedFeatures.stream() //
+            var layerSupportedFeatures = supportedFeatures.stream() //
                     .filter(feature -> feature.getLayer().equals(layer)) //
-                    .collect(toList());
-            List<AnnotationFeature> layerAllFeatures = allFeatures.stream() //
+                    .toList();
+            var layerAllFeatures = allFeatures.stream() //
                     .filter(feature -> feature.getLayer().equals(layer)) //
-                    .collect(toList());
+                    .toList();
 
-            for (Configuration cfg : cfgSet.getConfigurations()) {
-                FeatureStructure fs = cfg.getRepresentative(casDiff.getCasMap());
-                String user = cfg.getRepresentativeCasGroupId();
+            for (var cfg : cfgSet.getConfigurations()) {
+                var fs = cfg.getRepresentative(casDiff.getCasMap());
+                var user = cfg.getRepresentativeCasGroupId();
 
                 // We need to pass in *all* the annotation features here because we also to that in
                 // other places where we create renderers - and the set of features must always be
                 // the same because otherwise the IDs of armed slots would be inconsistent
-                LayerSupport<?, ?> layerSupport = layerSupportRegistry.getLayerSupport(layer);
-                Renderer renderer = layerSupport.createRenderer(layer, () -> layerAllFeatures);
+                var layerSupport = layerSupportRegistry.getLayerSupport(layer);
+                var renderer = layerSupport.createRenderer(layer, () -> layerAllFeatures);
 
-                List<VObject> objects = renderer.render(aVdoc, (AnnotationFS) fs,
-                        layerSupportedFeatures, aRequest.getWindowBeginOffset(),
-                        aRequest.getWindowEndOffset());
+                var objects = renderer.render(aVdoc, (AnnotationFS) fs, layerSupportedFeatures,
+                        aRequest.getWindowBeginOffset(), aRequest.getWindowEndOffset());
 
-                for (VObject object : objects) {
-                    VID curationVid = new CurationVID(user, object.getVid());
+                for (var object : objects) {
+                    var curationVid = new CurationVID(user, object.getVid());
                     if (generatedCurationVids.contains(curationVid)) {
                         continue;
                     }
@@ -223,25 +189,47 @@ public class CurationSidebarRenderer
                     aVdoc.add(object);
 
                     aVdoc.add(new VComment(object.getVid(), VCommentType.INFO,
-                            "Users with this annotation:\n" + cfg.getCasGroupIds().stream()
-                                    .collect(Collectors.joining(", "))));
+                            "Annotators: " + cfg.getCasGroupIds().stream().collect(joining(", "))));
 
-                    if (object instanceof VArc) {
-                        VArc arc = (VArc) object;
+                    if (object instanceof VArc arc) {
                         // Currently works for relations but not for slots
                         arc.setSource(getCurationVid(aRequest.getAnnotationUser(), diff, cfg,
                                 arc.getSource()));
                         arc.setTarget(getCurationVid(aRequest.getAnnotationUser(), diff, cfg,
                                 arc.getTarget()));
-                        log.trace("Rendering curation vid: {} source: {} target: {}", arc.getVid(),
+                        LOG.trace("Rendering curation vid: {} source: {} target: {}", arc.getVid(),
                                 arc.getSource(), arc.getTarget());
                     }
                     else {
-                        log.trace("Rendering curation vid: {}", object.getVid());
+                        LOG.trace("Rendering curation vid: {}", object.getVid());
                     }
                 }
             }
         }
+    }
+
+    private CasDiff createDiff(RenderRequest aRequest, List<User> selectedUsers)
+    {
+        var casses = new LinkedHashMap<String, CAS>();
+
+        // This is the CAS that the user can actively edit
+        casses.put(aRequest.getAnnotationUser().getUsername(), aRequest.getCas());
+
+        for (var user : selectedUsers) {
+            try {
+                var userCas = documentService.readAnnotationCas(aRequest.getSourceDocument(),
+                        user.getUsername());
+                casses.put(user.getUsername(), userCas);
+            }
+            catch (IOException e) {
+                LOG.error("Could not retrieve CAS for user [{}] and project {}", user.getUsername(),
+                        aRequest.getProject(), e);
+            }
+        }
+
+        var adapters = getDiffAdapters(annotationService, aRequest.getVisibleLayers());
+        return doDiff(adapters, LINK_ROLE_AS_LABEL, casses, aRequest.getWindowBeginOffset(),
+                aRequest.getWindowEndOffset());
     }
 
     /**
